trying to sort out path and bits issues for 2.0a2